--- a/MAIN/main.html
+++ b/MAIN/main.html
@@ -62,7 +62,7 @@
                     <span class="fas fa-caret-down first"></span></a>
                     <ul class="about-show">
                         <li><a href="aboutOBJ.html">About Us</a></li>
-                        <li><a href="/jethao-ass/product.html">Our Products</a></li>
+                        <li><a href="/jet-ass/product.html">Our Products</a></li>
                         <li><a href="/registiration/register.html">Register Now</a></li>
                     </ul>
                 </li>
