--- a/MAIN/aboutmember.html
+++ b/MAIN/aboutmember.html
@@ -55,7 +55,7 @@
         location.href ="/MAIN/main.html"
        }
        document.getElementById('buy').onclick = function(){
-        location.href = "/jethao-ass/product.html"
+        location.href = "/jet-ass/product.html"
        }
        document.getElementById('category').onclick = function(){
         location.href = "/Ass/product.html"
