--- a/MAIN/aboutOBJ.html
+++ b/MAIN/aboutOBJ.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<html>
 <head>
     <title>About YYDS</title>
     <meta charset="UFT-8">
@@ -55,14 +54,10 @@
         location.href ="/MAIN/main.html"
        }
        document.getElementById('buy').onclick = function(){
-        location.href = "/jet-ass/product.html"
+        location.href = "/Ass/product.html"
        }
        document.getElementById('category').onclick = function(){
         location.href = "/Ass/product.html"
        }
-       $('#bot').click(function(){
-             $(this).toggleClass("chatbot");
-            });
     </script>
 </body>
-</html>
