--- a/MAIN/main.html
+++ b/MAIN/main.html
@@ -2,14 +2,17 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>YYDS Monitor Shop</title>
         <link rel="stylesheet" href="main.css">
-        <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
-        <script src="app.js"></script>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"/>
+        <link rel="stylesheet" href="/MAIN/mscbot/static/css/chat.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
     </head>
     <body>
+        <!-- image Slider -->
         <button id="sec1">
             <span class="fas fa-caret-down third"></span>
         </button>
@@ -50,8 +53,8 @@
                 </div>
             </div>
         </section>
-          
         
+        <!-- side bar and buttons-->
         <div class="btn">
             <span class="fas fa-bars"></span>
         </div>
@@ -62,7 +65,7 @@
                     <span class="fas fa-caret-down first"></span></a>
                     <ul class="about-show">
                         <li><a href="aboutOBJ.html">About Us</a></li>
-                        <li><a href="/jet-ass/product.html">Our Products</a></li>
+                        <li><a href="/Ass/product.html">Our Products</a></li>
                         <li><a href="/registiration/register.html">Register Now</a></li>
                     </ul>
                 </li>
