--- a/MAIN/aboutmember.html
+++ b/MAIN/aboutmember.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<html>
 <head>
     <title>About YYDS</title>
     <meta charset="UFT-8">
@@ -19,8 +18,8 @@
             <h1>About Our Members</h1>
             <br>
           <h3>Compose of like-minded indivisuals.<br>
-            We are currently studying in year 20XX <br> 
-           of our 20YY course</h3>
+            We are currently in our first year of<br> 
+           Diploma in Information Techonology course.</h3>
         </div>
     </div> 
     <div class="topbar">
@@ -55,14 +54,10 @@
         location.href ="/MAIN/main.html"
        }
        document.getElementById('buy').onclick = function(){
-        location.href = "/jet-ass/product.html"
+        location.href = "/Ass/product.html"
        }
        document.getElementById('category').onclick = function(){
         location.href = "/Ass/product.html"
        }
-       $('#bot').click(function(){
-             $(this).toggleClass("chatbot");
-            });
     </script>
 </body>
-</html>
