--- a/MAIN/aboutmember.html
+++ b/MAIN/aboutmember.html
@@ -18,8 +18,8 @@
             <h1>About Our Members</h1>
             <br>
           <h3>Compose of like-minded indivisuals.<br>
-            We are currently in our first year of<br> 
-           Diploma in Information Techonology course.</h3>
+            We are currently in our XX year of<br> 
+           YY course.</h3>
         </div>
     </div> 
     <div class="topbar">
